--- a/.mise.toml
+++ b/.mise.toml
@@ -10,3 +10,10 @@ run = "pre-commit run -a"
 [tasks.pre-commit-update]
 description = "Update pre-commit hooks to the latest versions"
 run = "pre-commit autoupdate"
+
+[tasks.package]
+description = "Create a package after cleaning build artifacts"
+run = [
+    "cargo clean",
+    "cargo package --allow-dirty"
+]
