feat: remove `training` as default feature in Cargo.toml and update README accordingly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ description = "Source of oneAPI Deep Neural Network Library (oneDNN)"
 cmake = "0.1"
 
 [features]
-default = ["training"]
+default = []
 graph = []
 training = []
 inference = []
