--- a/.mise.toml
+++ b/.mise.toml
@@ -15,6 +15,7 @@ run = "uv tool run --with pre-commit-uv pre-commit run -a"
 [tasks.pre-commit-update]
 description = "Update pre-commit hooks to the latest versions"
 run = "uv tool run --with pre-commit-uv pre-commit autoupdate"
+depends_post = "pre-commit-all"
 
 [tasks.package]
 description = "Create a package after cleaning build artifacts"
@@ -32,3 +33,4 @@ run = "cargo rustdoc -vv -- --cfg docsrs"
 description = "Bump package version number"
 alias = "v"
 run = "uv tool run bump-my-version bump"
+depends_post = "package"
